# potnia

./: .coveragerc  .gitignore  CONTRIBUTING.rst  README.rst  example.py  mkdocs.sh  paper.bib  paper.md  paper.sh  pyproject.toml
.github/workflows/: docs.yml  joss-draft-pdf.yml  publish.yml  testing.yml
docs/: additions.rst  api.rst  conf.py  credits.rst  fonts.rst  glyphs.rst  index.rst  linear_b.md  linear_b_rules.md  quickstart.rst
potnia/: __init__.py  akkadian.py  arabic.py  data.py  enums.py  hittite.py  linear_a.py  linear_b.py  lineara.py  linearb.py  luwian.py  main.py  mapper.py  mapping.py  script.py  translate.py
potnia/data/: arabic.yaml  arabic_symbols.yaml  hittite.yaml  linear_a.yaml  linear_b.yaml  logograms_common.yaml  logograms_unique_linear_a.yaml  logograms_unique_linear_b.yaml  luwian.yaml  luwian_cuneiform.yaml  luwian_hieroglyphic.yaml  lycian.yaml  lydian.yaml  potnia.bib  syllabograms_common.yaml  syllabograms_hittite_cuneiform.yaml  syllabograms_luwian_hieroglyphs.yaml  syllabograms_unique_linear_a.yaml  syllabograms_unique_linear_b.yaml
potnia/data/rules/: regularization_rules_linear_b.yaml  transliteration_rules_arabic.yaml  transliteration_rules_linear_b.yaml
potnia/rules/: ignore_patterns.yaml  transliteration_rules.yaml
potnia/scripts/: akkadian.py  arabic.py  hittite.py  linear_a.py  linear_b.py  luwian.py  luwian_cuneiform.py  luwian_hieroglyphic.py  lycian.py  lydian.py
tests/: data.py  test_arabic.py  test_data.py  test_hittite.py  test_linear_a.py  test_linear_b.py  test_luwian.py  test_luwian_cuneiform.py  test_luwian_hieroglyhpic.py  test_lycian.py  test_lydian.py  test_main.py  test_mapper.py  test_script.py  test_translate.py
tests/expected/: arabic_unicode.yaml  errors.txt  hittite_tokenize_transliteration.yaml  hittite_unicode.yaml  linear_a_tokenize_transliteration.yaml  linear_a_transliteration.yaml  linear_a_unicode.yaml  linear_a_unicode_regularized.yaml  linear_b_tokenize_transliteration.yaml  linear_b_transliteration.yaml  linear_b_unicode.yaml  linear_b_unicode_regularized.yaml  luwian_cuneiform_unicode.yaml  luwian_tokenize_transliteration.yaml  luwian_unicode.yaml  lycian_unicode.yaml  lydian_unicode.yaml
