[tool.poetry]
name = "potnia"
version = "0.1.1"
description = "Potnia is a Python Library to help users work with Aegean scripts."
authors = ["Emily Tour <esmtour@gmail.com>", "Robert Turnbull"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.3"
Sphinx = ">=5.0.0"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-copybutton = ">=0.4.0"
myst-parser = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
